sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:10: error: ')' expected but 'for' found.
		for (i<- getNombreValeurs() -2 to 0 by -1){
                ^AlgCocktailSort1:11: error: '(' expected but identifier found.
			if plusPetit(i+1,i){
                           ^AlgCocktailSort1:14: error: illegal start of simple expression
		}
                ^